style: get rid of depracted method
Signed-off-by: tison <wander4096@gmail.com>